Update project scala/spark_sbt build